--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home-work-02</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -109,6 +111,7 @@
         </address>
     </footer>
 
+    <!-- Портфолио -->
     <header>
         <!-- Шапка -->
         <nav>
@@ -124,79 +127,111 @@
             <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
         </ul>
     </header>
+
     <main>
-        <!-- Герой -->
+                
+        <!-- Фильтри -->
         <section>
-            <h1> Эффективные решения для вашего бизнеса </h1>
-            <p> <a href="mailto:info@devstudio.com"> <button>Заказать услугу</button> </a> </p>
-        </section>
-        <!-- Особенности -->
-        <section>
-            <!-- <h2> Особености </h2> -->
             <ul>
+                <!-- Фильтр 1-->
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <button type="button">Все</button>
                 </li>
+                <!-- Фильтр 2-->
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <button type="button">Веб-сайты</button>
                 </li>
+                <!-- Фильтр 3-->
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <button type="button">Приложения</button>
                 </li>
+                <!-- Фильтр 4-->
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <button type="button">Дизайн</button>
+                </li>
+                <!-- Фильтр 5-->
+                <li>
+                    <button type="button">Маркетинг</button>
                 </li>
             </ul>
         </section>
-        <!-- Чем мы занимаемся -->
-        <section>
-            <h2> Чем мы занимаемся </h2>
-            <ul>
-                <li>
-                    <img src="./images/box-1.jpg" alt="box 1" width="370px" height="294px">
-                </li>
-                <li>
-                    <img src="./images/box-2.jpg" alt="box 2" width="370px" height="294px">
-                </li>
-                <li>
-                    <img src="./images/box-3.jpg" alt="box 3" width="370px" height="294px">
-                </li>
-            </ul>
-        </section>
-        <!-- Наша команда -->
-        <section>
-            <h2> Наша команда </h2>
-            <ul>
-                <!-- team card 1-->
-                <li>
-                    <img src="./images/team-foto-1.jpg" alt="Игорь Демьяненко" width="270px" height="260px">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <!-- team card 2-->
-                <li>
-                    <img src="./images/team-foto-2.jpg" alt="Ольга Репина" width="270px" height="260px">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <!-- team card 3-->
-                <li>
-                    <img src="./images/team-foto-3.jpg" alt="box 3" width="270px" height="260px">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <!-- team card 4-->
-                <li>
-                    <img src="./images/team-foto-4.jpg" alt="box 3" width="270px" height="260px">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+
+        <!-- Проэкты -->
+        <ul>
+            <!-- Проэкт 1-->
+            <li>
+                <a href="">
+                <img src="./images/project-1.jpg" alt="project-1" width="370px" height="294px">
+                <h3>Технокряк</h3>
+                <p>Веб-сайт</p>
+                </a>
+            </li>
+            <!-- Проэкт 2-->
+            <li>
+                <a href="">
+                <img src="./images/project-2.jpg" alt="project-2" width="370px" height="294px">
+                <h3>Постер New Orlean vs Golden Star</h3>
+                <p>Дизайн</p>
+                </a>
+            </li>
+            <!-- Проэкт 3-->
+            <li>
+                <a href="">
+                <img src="./images/project-3.jpg" alt="project-3" width="370px" height="294px">
+                <h3>Ресторан Seafood</h3>
+                <p>Приложение</p>
+                </a>
+            </li>
+            <!-- Проэкт 4-->
+            <li>
+                <a href="">
+                <img src="./images/project-4.jpg" alt="project-4" width="370px" height="294px">
+                <h3>Проект Prime</h3>
+                <p>Маркетинг</p>
+                </a>
+            </li>
+            <!-- Проэкт 5-->
+            <li>
+                <a href="">
+                <img src="./images/project-5.jpg" alt="project-5" width="370px" height="294px">
+                <h3>Проект Boxes</h3>
+                <p>Приложение</p>
+                </a>
+            </li>
+            <!-- Проэкт 6-->
+            <li>
+                <a href="">
+                <img src="./images/project-6.jpg" alt="project-6" width="370px" height="294px">
+                <h3>Inspiration has no Borders</h3>
+                <p>Веб-сайт</p>
+                </a>
+            </li>
+            <!-- Проэкт 7-->
+            <li>
+                <a href="">
+                <img src="./images/project-7.jpg" alt="project-7" width="370px" height="294px">
+                <h3>Издание Limited Edition</h3>
+                <p>Дизайн</p>
+                </a>
+            </li>
+            <!-- Проэкт 8-->
+            <li>
+                <a href="">
+                <img src="./images/project-8.jpg" alt="project-8" width="370px" height="294px">
+                <h3>Проект LAB</h3>
+                <p>Маркетинг</p>
+                </a>
+            </li>
+            <!-- Проэкт 9-->
+            <li>
+                <a href="">
+                <img src="./images/project-9.jpg" alt="project-9" width="370px" height="294px">
+                <h3>Growing Business</h3>
+                <p>Приложение</p>
+                </a>
+            </li>
+        </ul>
+
     </main>
     <footer>
         <a href="index.html"> WebStudio </a>
