--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home-work-02</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="page-header">
         <!-- Шапка -->
         <nav>
-             <a href="index.html"> WebStudio </a> 
-             <ul>
-                 <li> <a href=""> Студия </a></li>
+             <div class="logo">
+             <a href="index.html"> <span class="name-logo">Web</span>Studio </a>
+             </div>
+             <ul class="nav-list">
+                 <li> <a href=""> <span class="name-logo">Студия</span></a></li>
                  <li> <a href=""> Портфолио </a></li>
                  <li> <a href=""> Контакты </a></li>
              </ul>
         </nav>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+        <ul class="nav-contacts">
+            <li> <a href="mailto:info@devstudio.com"> <span class="name-logo">info@devstudio.com</span></a></li>
             <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
         </ul>   
     </header>
@@ -112,18 +114,20 @@
     </footer>
 
     <!-- Портфолио -->
-    <header>
+    <header class="page-header">
         <!-- Шапка -->
         <nav>
-            <a href="index.html"> WebStudio </a>
-            <ul>
-                <li> <a href=""> Студия </a></li>
+            <div class="logo">
+                <a href="index.html"> <span class="name-logo">Web</span>Studio </a>
+            </div>
+            <ul class="nav-list">
+                <li> <a href=""> <span class="name-logo">Студия</span></a></li>
                 <li> <a href=""> Портфолио </a></li>
                 <li> <a href=""> Контакты </a></li>
             </ul>
         </nav>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
+        <ul class="nav-contacts">
+            <li> <a href="mailto:info@devstudio.com"> <span class="name-logo">info@devstudio.com</span></a></li>
             <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
         </ul>
     </header>
