--- a/index.html
+++ b/index.html
@@ -28,35 +28,41 @@
     </header>
     <main> 
         <!-- Герой -->
-        <section> 
-            <h1> Эффективные решения для вашего бизнеса </h1>
-            <p> <a href="mailto:info@devstudio.com"> <button>Заказать услугу</button> </a> </p>
+        <section class="page-hero"> 
+            <h1 class="motto"> Эффективные решения для вашего бизнеса </h1>
+            <p> 
+                <a href="mailto:info@devstudio.com"> 
+                    <button class="button-motto-bg"> 
+                        <span class="button-motto">Заказать услугу</span>
+                    </button> 
+                </a> 
+            </p>
         </section>
         <!-- Особенности -->
-        <section>
+        <section class="features">
             <!-- <h2> Особености </h2> -->
             <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <li class="features-1">
+                    <h3 class="heading-features">Внимание к деталям</h3>
+                    <p class="paragraph-features">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="features-2">
+                    <h3 class="heading-features">Пунктуальность</h3>
+                    <p class="paragraph-features">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="features-3">
+                    <h3 class="heading-features">Планирование</h3>
+                    <p class="paragraph-features">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="features-4">
+                    <h3 class="heading-features">Современные технологии</h3>
+                    <p class="paragraph-features">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Чем мы занимаемся -->
-        <section>
-            <h2> Чем мы занимаемся </h2>
+        <section class="what-are-we-doing">
+            <h2 class="heading-what-are-we-doing"> Чем мы занимаемся </h2>
             <ul>
                 <li>
                 <img src="./images/box-1.jpg" alt="box 1" width="370px" height="294px">
@@ -102,15 +108,22 @@
          </main>
 
          <!-- Подвал -->
-    <footer>
-        <a href="index.html"> WebStudio </a>
+    <footer class="footer">
+        <div class="logo">
+            <a href="index.html"> 
+                <span class="name-logo-footer-1">Web</span><span class="name-logo-footer-2">Studio</span>
+            </a>
+        </div>
+        <div class="address">
         <address>
-        <ul>
-            <li> <a href=""> г. Киев, пр-т Леси Украинки, 26 </a> </li>
-            <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-            <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+        <ul class="navigation">
+            <li> <a href=""> <span class="location">г. Киев, пр-т Леси Украинки, 26</span></a></li>
+            <li> <a href="mailto:info@devstudio.com"> <span class="email">info@devstudio.com</span></a></li>
+            <li> <a href="tel:+380961111111"> <span class="phone-number">+38 096 111 11 11</span></a> </li>
         </ul>
         </address>
+        </div>
+    
     </footer>
 
     <!-- Портфолио -->
@@ -237,15 +250,22 @@
         </ul>
 
     </main>
-    <footer>
-        <a href="index.html"> WebStudio </a>
-        <address>
-            <ul>
-                <li> <a href=""> г. Киев, пр-т Леси Украинки, 26 </a> </li>
-                <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-                <li> <a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-            </ul>
-        </address>
+
+    <footer class="footer">
+        <div class="logo">
+            <a href="index.html">
+                <span class="name-logo-footer-1">Web</span><span class="name-logo-footer-2">Studio</span>
+            </a>
+        </div>
+        <div class="address">
+            <address>
+                <ul class="navigation">
+                    <li> <a href=""> <span class="location">г. Киев, пр-т Леси Украинки, 26</span></a></li>
+                    <li> <a href="mailto:info@devstudio.com"> <span class="email">info@devstudio.com</span></a></li>
+                    <li> <a href="tel:+380961111111"> <span class="phone-number">+38 096 111 11 11</span></a> </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 
