home-work-02-our-team

--- a/index.html
+++ b/index.html
@@ -76,32 +76,32 @@
                 </ul>
         </section>
         <!-- Наша команда -->
-        <section>
-            <h2> Наша команда </h2>
+        <section class="our-team">
+            <h2 class="heading-our-team"> Наша команда </h2>
             <ul>
                 <!-- team card 1-->
-                <li>
+                <li class="card-1">
                     <img src="./images/team-foto-1.jpg" alt="Игорь Демьяненко" width="270px" height="260px">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="headign-team">Игорь Демьяненко</h3>
+                    <p class="paragraph-team">Product Designer</p>
                 </li>
                 <!-- team card 2-->
-                <li>
+                <li class="card-2">
                     <img src="./images/team-foto-2.jpg" alt="Ольга Репина" width="270px" height="260px">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="headign-team">Ольга Репина</h3>
+                    <p class="paragraph-team">Frontend Developer</p>
                 </li>
                 <!-- team card 3-->
-                <li>
+                <li class="card-3">
                     <img src="./images/team-foto-3.jpg" alt="box 3" width="270px" height="260px">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="headign-team">Николай Тарасов</h3>
+                    <p class="paragraph-team">Marketing</p>
                 </li>
                 <!-- team card 4-->
-                <li>
+                <li class="card-4">
                     <img src="./images/team-foto-4.jpg" alt="box 3" width="270px" height="260px">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="headign-team">Михаил Ермаков</h3>
+                    <p class="paragraph-team">UI Designer</p>
                 </li>
             </ul>
         </section>
