home-work-02-filters

--- a/index.html
+++ b/index.html
@@ -148,27 +148,37 @@
     <main>
                 
         <!-- Фильтри -->
-        <section>
+        <section class="filters">
             <ul>
                 <!-- Фильтр 1-->
                 <li>
-                    <button type="button">Все</button>
+                    <button type="button">
+                        <span class="filter-1">Все</span>
+                    </button>
                 </li>
                 <!-- Фильтр 2-->
                 <li>
-                    <button type="button">Веб-сайты</button>
+                    <button type="button">
+                        <span class="filter-2">Веб-сайты</span>  
+                    </button>
                 </li>
                 <!-- Фильтр 3-->
-                <li>
-                    <button type="button">Приложения</button>
+                <li class="filter-3">
+                    <button type="button">
+                    <span class="filter-3">Приложения</span>
+                    </button>
                 </li>
                 <!-- Фильтр 4-->
-                <li>
-                    <button type="button">Дизайн</button>
+                <li class="filter-4">
+                    <button type="button">
+                    <span class="filter-4">Дизайн</span>
+                    </button>
                 </li>
                 <!-- Фильтр 5-->
-                <li>
-                    <button type="button">Маркетинг</button>
+                <li class="filter-5">
+                    <button type="button">
+                    <span class="filter-5">Маркетинг</span>
+                    </button>
                 </li>
             </ul>
         </section>
@@ -267,10 +277,6 @@
             </address>
         </div>
     </footer>
-
-
-
-
 
 </body>
 </html>
