home-work-02-project

--- a/index.html
+++ b/index.html
@@ -184,77 +184,77 @@
         </section>
 
         <!-- Проэкты -->
-        <ul>
+        <ul class="project">
             <!-- Проэкт 1-->
-            <li>
+            <li class="project-1"> 
                 <a href="">
                 <img src="./images/project-1.jpg" alt="project-1" width="370px" height="294px">
-                <h3>Технокряк</h3>
-                <p>Веб-сайт</p>
+                <h3 class="heading-project">Технокряк</h3>
+                <p class="paragraph-project">Веб-сайт</p>
                 </a>
             </li>
             <!-- Проэкт 2-->
-            <li>
+            <li class="project-2">
                 <a href="">
                 <img src="./images/project-2.jpg" alt="project-2" width="370px" height="294px">
-                <h3>Постер New Orlean vs Golden Star</h3>
-                <p>Дизайн</p>
+                <h3 class="heading-project">Постер New Orlean vs Golden Star</h3>
+                <p class="paragraph-project">Дизайн</p>
                 </a>
             </li>
             <!-- Проэкт 3-->
-            <li>
+            <li class="project-3">
                 <a href="">
                 <img src="./images/project-3.jpg" alt="project-3" width="370px" height="294px">
-                <h3>Ресторан Seafood</h3>
-                <p>Приложение</p>
+                <h3 class="heading-project">Ресторан Seafood</h3>
+                <p class="paragraph-project">Приложение</p>
                 </a>
             </li>
             <!-- Проэкт 4-->
-            <li>
+            <li class="project-4">
                 <a href="">
                 <img src="./images/project-4.jpg" alt="project-4" width="370px" height="294px">
-                <h3>Проект Prime</h3>
-                <p>Маркетинг</p>
+                <h3 class="heading-project">Проект Prime</h3>
+                <p class="paragraph-project">Маркетинг</p>
                 </a>
             </li>
             <!-- Проэкт 5-->
-            <li>
+            <li class="project-4">
                 <a href="">
                 <img src="./images/project-5.jpg" alt="project-5" width="370px" height="294px">
-                <h3>Проект Boxes</h3>
-                <p>Приложение</p>
+                <h3 class="heading-project">Проект Boxes</h3>
+                <p class="paragraph-project">Приложение</p>
                 </a>
             </li>
             <!-- Проэкт 6-->
-            <li>
+            <li class="project-6">
                 <a href="">
                 <img src="./images/project-6.jpg" alt="project-6" width="370px" height="294px">
-                <h3>Inspiration has no Borders</h3>
-                <p>Веб-сайт</p>
+                <h3 class="heading-project">Inspiration has no Borders</h3>
+                <p class="paragraph-project">Веб-сайт</p>
                 </a>
             </li>
             <!-- Проэкт 7-->
-            <li>
+            <li class="project-7">
                 <a href="">
                 <img src="./images/project-7.jpg" alt="project-7" width="370px" height="294px">
-                <h3>Издание Limited Edition</h3>
-                <p>Дизайн</p>
+                <h3 class="heading-project">Издание Limited Edition</h3>
+                <p class="paragraph-project">Дизайн</p>
                 </a>
             </li>
             <!-- Проэкт 8-->
-            <li>
+            <li class="project-8">
                 <a href="">
                 <img src="./images/project-8.jpg" alt="project-8" width="370px" height="294px">
-                <h3>Проект LAB</h3>
-                <p>Маркетинг</p>
+                <h3 class="heading-project">Проект LAB</h3>
+                <p class="paragraph-project">Маркетинг</p>
                 </a>
             </li>
             <!-- Проэкт 9-->
-            <li>
+            <li class="project-9">
                 <a href="">
                 <img src="./images/project-9.jpg" alt="project-9" width="370px" height="294px">
-                <h3>Growing Business</h3>
-                <p>Приложение</p>
+                <h3 class="heading-project">Growing Business</h3>
+                <p class="paragraph-project">Приложение</p>
                 </a>
             </li>
         </ul>
