home-work-02-portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
             <ul>
                 <!-- Фильтр 1-->
                 <li>
-                    <button type="button">
+                    <button type="button" class="button-filter-1">
                         <span class="filter-1">Все</span>
                     </button>
                 </li>
