--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
              </div>
              <ul class="nav-list">
                  <li> <a href=""> <span class="name-logo">Студия</span></a></li>
-                 <li> <a href=""> Портфолио </a></li>
+                 <li> <a href="./portfolio.html"> Портфолио </a></li>
                  <li> <a href=""> Контакты </a></li>
              </ul>
         </nav>
