--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
                 <a href="index.html"> <span class="name-logo">Web</span>Studio </a>
             </div>
             <ul class="nav-list">
-                <li> <a href=""> <span class="name-logo">Студия</span></a></li>
+                <li> <a href="./index.html"> <span class="name-logo">Студия</span></a></li>
                 <li> <a href=""> Портфолио </a></li>
                 <li> <a href=""> Контакты </a></li>
             </ul>
