--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home-work-02</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="page">
@@ -16,9 +16,9 @@
                 <span class="web">Web</span>Studio
             </a>
             <ul class="site-nav list">
-                <li><a href=""class="link">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="" >Контакты</a></li>
+                <li><a href=""class="link curent">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="auth-nav list">
@@ -32,7 +32,7 @@
 
         <section class="section">
             <h1 class="section-title">Эффективные решения <br> для вашего бизнеса</h1>
-            <a href="button" class="button">Заказать услугу</a>
+            <a href="button" class="button primary">Заказать услугу</a>
         </section>
 
         <!-- Особенности -->
@@ -101,16 +101,20 @@
     <!-- Подвал -->
 
     <footer>
+        <div>
         <nav>
-            <a href="./index.html" class="logo">
-                <span class="web">Web</span>Studio
+            <a href="./index.html">
+                <span class="web-footer">Web</span> <span class="studio-footer">Studio</span>
             </a>
         </nav>
-        <ul>
-            <li><a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38-096-111-11-11">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+            <li><a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
+                    class="link">г.
+                    Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+38-096-111-11-11" class="link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </footer>
 </body>
 </html>
