--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home-work-2</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -15,14 +15,14 @@
             <span class="web">Web</span>Studio
         </a>
         <ul class="site-nav list">
-            <li><a href="./index.html">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link curent">Портфолио</a></li>
+            <li><a href=""class="link">Контакты</a></li>
         </ul>
     </nav>
     <ul class="auth-nav list">
-        <li> <a href="mailto:info@devstudio.com"> info@devstudio.com </a></li>
-        <li> <a href="tel:+38-096-111-11-11"> +38 096 111 11 11 </a></li>
+        <li> <a href="mailto:info@devstudio.com" class="link"> info@devstudio.com </a></li>
+        <li> <a href="tel:+38-096-111-11-11" class="link"> +38 096 111 11 11 </a></li>
     </ul>
 </header>
 <main>
@@ -31,11 +31,11 @@
 
     <section>
         <ul>
-            <li><a href="button" class="button">Все</a></li>
-            <li><a href="button" class="button-link">Веб-сайты</a></li>
-            <li><a href="button" class="button-link">Приложения</a></li>
-            <li><a href="button" class="button-link">Дизайн</a></li>
-            <li><a href="button" class="button-link">Маркетинг</a></li>
+            <li><a href="button" class="button primary">Все</a></li>
+            <li><a href="button" class="button secondary">Веб-сайты</a></li>
+            <li><a href="button" class="button secondary">Приложения</a></li>
+            <li><a href="button" class="button secondary">Дизайн</a></li>
+            <li><a href="button" class="button secondary">Маркетинг</a></li>
             
         </ul>
     </section>
@@ -97,18 +97,20 @@
 <!-- Подвал -->
 
 <footer>
-    <nav>
-        <a href="./index.html" class="logo">
-            <span class="web">Web</span>Studio
-        </a>
-    </nav>
-    <ul>
-        <li><a
-                href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17">г.
-                Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+38-096-111-11-11">+38 096 111 11 11</a></li>
-    </ul>
+    <div>
+        <nav>
+            <a href="./index.html">
+                <span class="web-footer">Web</span> <span class="studio-footer">Studio</span>
+            </a>
+        </nav>
+        <ul class="auth-nav list">
+            <li><a href="https://www.google.com/maps/d/viewer?msa=0&mid=10uSM3H-mIU3GznYo2szRIEphczw&ll=50.42732700000001%2C30.538092&z=17"
+                    class="link">г.
+                    Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li><a href="tel:+38-096-111-11-11" class="link">+38 096 111 11 11</a></li>
+        </ul>
+    </div>
 </footer>
 </body>
 </html>
