--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <ul class="site-nav list">
             <li><a href="./index.html" class="link">Студия</a></li>
             <li><a href="./portfolio.html" class="link curent">Портфолио</a></li>
-            <li><a href=""class="link">Контакты</a></li>
+            <li><a href="" class="link">Контакты</a></li>
         </ul>
     </nav>
     <ul class="auth-nav list">
@@ -29,20 +29,18 @@
     </ul>
 </header>
 <main>
-
     <!-- Фильтр -->
-
-    <section>
+    <div>
+        <!--<h1> Фильтры </h1>-->
         <ul>
             <li><a href="button" class="button">Все</a></li>
             <li><a href="button" class="button">Веб-сайты</a></li>
             <li><a href="button" class="button">Приложения</a></li>
             <li><a href="button" class="button">Дизайн</a></li>
             <li><a href="button" class="button">Маркетинг</a></li>
-            
+        
         </ul>
-    </section>
-
+    </div>
     <!-- Нашы Проэкты -->
 
     <section class="project"> 
